# ColumBOT

./: .gitignore  README.md  alembic.ini  docker-compose.yml  example_env.txt  main.py  old_main.py  pyproject.toml  requirements.txt
TG_bot_pdf/: main.py  run.py
TG_bot_pdf/config/: config.py
TG_bot_pdf/document_gpt/helper/: conversation.py  create_index.py  telegram_api.py  utils.py
alembic/: env.py
alembic/versions/: 01baab2d6b4b_add_user_doc_model_enum.py  0409bd4cb700_doc_add_name.py  2c2252e561e1_init.py  407c4f763209_init.py  7b12aad9fa57_add_user_is_admin.py  91d951d07075_add_query.py
data/output/: output.txt
docker_publication/: Dockerfile  docker-compose.yml  run_presets.sh  start.sh
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: doc.py  queries.py  users.py
src/routes/: telegrambot.py
src/schemas/: doc.py  telegrambot.py  users.py
src/services/: admin_panel.py  conversation.py  create_index.py  dolly_llm.py  falcon_llm.py  openai_llm.py  telegrambot.py  utils.py
