[tool.poetry]
name = "columbot"
version = "0.1.0"
description = ""
authors = ["Андрій <andrey.maybrodskyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.103.1"
pydantic = "1.10.12"
pytelegrambotapi = "^4.13.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
langchain = "^0.0.295"
pypdf2 = "^3.0.1"
huggingface-hub = "^0.17.2"
sentence-transformers = "^2.2.2"
torch = "2.0.0"
pandas = "2.0.3"
openai = "^0.28.0"
update = "^0.0.1"
chromadb = "0.3.26"
pyarrow = "^13.0.0"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
